--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -28,5 +28,6 @@
     <string name="title_activity_settings">Settings</string>
     <string name="title_activity_my_books">MyBooks</string>
     <string name="title_activity_favorites">Favorites</string>
+    <string name="title_activity_book_list_activity_test">book_list_activity_test</string>
 
 </resources>
